--- a/HW1-Bash-Basics.ipynb
+++ b/HW1-Bash-Basics.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "# Homework 1: Jupyter and Bash Basics\n",
-    "Curated by Sabah Ul-Hasan, Karthik Gangavarapu, Huitian Dao, and Andrew Su\n",
+    "Curated by Sabah Ul-Hasan, Karthik Gangavarapu, Huitian Dao, Shang-Fu Chen, and Andrew Su\n",
     "\n",
     "Homeworks are due every Tuesday at 8 AM PST.<br>\n",
     "Download your homework as a notebook for TAs to provide feedback: HW#_LastName.ipynb<br>\n",
