--- a/HW2-Scripting+Jobs_Bash.ipynb
+++ b/HW2-Scripting+Jobs_Bash.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "# Homework 2: Scripting and Jobs (Bash, cnt'd)\n",
-    "Curated by Sabah Ul-Hasan, Huitian Dao, Karthik Gangavarapu, and Andrew Su\n",
+    "Curated by Sabah Ul-Hasan, Huitian Dao, Karthik Gangavarapu, Shang-Fu Chen, and Andrew Su\n",
     "\n",
     "Homeworks are due every Tuesday at 8 AM PST.<br>\n",
     "Download your homework as a notebook for TAs to provide feedback: HW#_LastName.ipynb<br>\n",
