--- a/HW3-Key_Introduction-to-R.ipynb
+++ b/HW3-Key_Introduction-to-R.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -44,9 +44,8 @@
    },
    "outputs": [],
    "source": [
-    "library(testthat)\n",
-    "library(digest)\n",
-    "library(stringr)"
+    "# Run this code cell for test case\n",
+    "library(testthat)"
    ]
   },
   {
@@ -103,8 +102,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -116,7 +114,6 @@
      "task": false
     }
    },
-   "outputs": [],
    "source": [
     "=== BEGIN MARK SCHEME ===  \n",
     "\n",
@@ -317,15 +314,16 @@
      "grade": false,
      "grade_id": "R_wd",
      "locked": true,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
-     "task": false
+     "task": true
     }
    },
    "source": [
     "### Question 5 (1 point)\n",
     "\n",
-    "Use R commands/functions to identify your current working directly, analogous to how we did this with bash. After you identify the current working directly, set it to our data folder. Include comments to describe what is happening at each step for an outside user. "
+    "Use R commands/functions to identify your current working directly, analogous to how we did this with bash. After you identify the current working directly, set it to our `data` folder. Include comments to describe what is happening at each step for an outside user. "
    ]
   },
   {
@@ -568,20 +566,25 @@
      "grade": false,
      "grade_id": "create_matrix",
      "locked": true,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
-     "task": false
+     "task": true
     }
    },
    "source": [
     "### Question 2 (1 point)\n",
     "\n",
-    "Create a `my.matrix` with 50 numbers, with 5 column and 10 rows, and print it."
+    "Create a `my.matrix` with 50 numbers, with 5 column and 10 rows, and print it.\n",
+    "\n",
+    "=== BEGIN MARK SCHEME ===  \n",
+    "Student has to print it.  \n",
+    "=== END MARK SCHEME === "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -620,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -634,17 +637,45 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"row number of your answer is 10\"\n",
-      "[1] \"column number of your answer is 5\"\n"
-     ]
+     "data": {
+      "text/html": [
+       "'row number of your answer is 10'"
+      ],
+      "text/latex": [
+       "'row number of your answer is 10'"
+      ],
+      "text/markdown": [
+       "'row number of your answer is 10'"
+      ],
+      "text/plain": [
+       "[1] \"row number of your answer is 10\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'column number of your answer is 5'"
+      ],
+      "text/latex": [
+       "'column number of your answer is 5'"
+      ],
+      "text/markdown": [
+       "'column number of your answer is 5'"
+      ],
+      "text/plain": [
+       "[1] \"column number of your answer is 5\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(paste0(\"row number of your answer is \", dim(my.matrix)[1]))\n",
-    "print(paste0(\"column number of your answer is \", dim(my.matrix)[2]))\n",
+    "paste0(\"row number of your answer is \", dim(my.matrix)[1])\n",
+    "paste0(\"column number of your answer is \", dim(my.matrix)[2])\n",
     "### BEGIN HIDDEN TESTS\n",
     "test_that(\"rows for my.matrix should be 10\", {\n",
     "    expect_that(dim(my.matrix)[1] == 10, is_true())\n",
@@ -723,6 +754,7 @@
     "count <- 0\n",
     "while (i <= 100) {\n",
     "    pi.i <- as.numeric(substr(pi.str, i, i))\n",
+    "#     if (pi.i %% 3 == 0) {\n",
     "    if (pi.i %% 2 == 0) {\n",
     "        count <- count + 1\n",
     "    }\n",
@@ -742,9 +774,9 @@
    "metadata": {
     "nbgrader": {
      "grade": true,
-     "grade_id": "pi_test",
+     "grade_id": "pi_test_1",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -755,6 +787,29 @@
     "test_that(\"the count number should be an integer between 45 and 55\", {\n",
     "    expect_that(count >= 45 & count <= 55, is_true())\n",
     "})\n",
+    "### BEGIN HIDDEN TESTS\n",
+    "test_that(\"check even digit count\", {\n",
+    "    expect_that(count == 51, is_true())\n",
+    "})\n",
+    "### END HIDDEN TESTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "pi_test_2",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
     "test_that(\"the count number should be a matrix\", {\n",
     "    expect_that(pi.100.mtx, is_a(\"matrix\"))\n",
     "})\n",
@@ -765,9 +820,6 @@
     "    expect_that(identical(as.vector(pi.100.mtx[1:10]), as.integer(c(3, 1, 4, 1, 5, 9, 2, 6, 5, 3))), is_true())\n",
     "})\n",
     "### BEGIN HIDDEN TESTS\n",
-    "test_that(\"check even digit count\", {\n",
-    "    expect_that(count == 51, is_true())\n",
-    "})\n",
     "test_that(\"check output matrix\", {\n",
     "    expect_that(identical(matrix(as.integer(unlist(strsplit(pi.str, ''))), 10, 10), pi.100.mtx), is_true())\n",
     "})\n",
@@ -860,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -958,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -975,13 +1027,11 @@
     "test_that(\"total number of female should be 4\", {\n",
     "    expect_that(summary(exp.animals$Sex)['Female'] == 4, is_true())\n",
     "})\n",
+    "\n",
+    "test_that(\"my.matrix should be 8 by 5\", {\n",
+    "    expect_that(identical(dim(exp.animals), as.integer(c(8, 5))), is_true())\n",
+    "})\n",
     "### BEGIN HIDDEN TESTS\n",
-    "test_that(\"rows for my.matrix should be 8\", {\n",
-    "    expect_that(dim(exp.animals)[1] == 8, is_true())\n",
-    "})\n",
-    "test_that(\"columns for my.matrix should be 5\", {\n",
-    "    expect_that(dim(exp.animals)[2] == 5, is_true())\n",
-    "})\n",
     "test_that(\"check animal name\", {\n",
     "    expect_that(identical(as.vector(exp.animals$Name), paste(rep(\"Fluf\", each=8), 1:8, sep=\"\")), is_true())\n",
     "})\n",
@@ -1316,7 +1366,7 @@
    },
    "source": [
     "### Question 4 (1 point)\n",
-    "On an integer scale of `1-5`, `1` being very easy and `5` being the most difficult, where would you rank the A2.bb assignment and why? Include some notes about what you gained from this past week that you didn't know before as well as notes of things you already knew. _(Insert your answer cell below.)_"
+    "On an integer scale of `1-5`, `1` being very easy and `5` being the most difficult, where would you rank the A2.bb assignment and why? Include some notes about what you gained from this past week that you didn't know before as well as notes of things you already knew. _(Insert cell below for your answer.)_"
    ]
   },
   {
@@ -1334,7 +1384,7 @@
    },
    "source": [
     "### Question 5 (1 point)\n",
-    "Improvements: Notice a mistake, or an area of this homework that could have been improved? Include your thoughts here. _(Insert your answer cell below.)_"
+    "Improvements: Notice a mistake, or an area of this homework that could have been improved? Include your thoughts here. _(Insert cell below for your answer.)_"
    ]
   }
  ],
