--- a/HW1/HW1-Bash-Basics.ipynb
+++ b/HW1/HW1-Bash-Basics.ipynb
@@ -45,9 +45,11 @@
     "### A1.aa: Github and Jupyter notebook [20-30 min] Individual\n",
     "\n",
     "#### aa.i Confirmation of Github account and download of data in Bioinformatics course repo<br>\n",
-    "Go to https://github.com/SuLab/Applied-Bioinformatics/tree/Fall-2020 and download as a zip file.<br>\n",
-    "Instead of looking via your Finder, use the command line to identify where this zip file has been downloaded and unzip. <br>\n",
-    "Then, use command line to find where the 'data' folder is located within 'Homework.'<br>\n"
+    "~~Go to https://github.com/SuLab/Applied-Bioinformatics/tree/Fall-2020 and download as a zip file.<br>\n",
+    "Instead of looking via your Finder, use the command line to identify where this zip file has been downloaded and unzip. ~~<br>\n",
+    "- Use command line to find and show where the `data.zip` file is located within `Question1` (using absolute path.)\n",
+    "- Move it back to `HW1` at the same level with this notebook and then `unzip` it.\n",
+    "- Copy out `fastq` folder to `HW1` folder.\n"
    ]
   },
   {
@@ -74,7 +76,7 @@
    "metadata": {
     "nbgrader": {
      "grade": true,
-     "grade_id": "cell-4be7bccd05eb4fcd",
+     "grade_id": "ls_pwd_cd_unzip_answer",
      "locked": false,
      "points": 1,
      "schema_version": 3,
@@ -84,7 +86,11 @@
    },
    "source": [
     "=== BEGIN MARK SCHEME ===  \n",
-    "__Answer: Students should use a combination of `ls`, `pwd`, and `cd` to reach their Downloads folder. Once there, `unzip [filename]`__  \n",
+    "__Answer:__  \n",
+    "- Students should use a combination of `ls`, `pwd`, and `cd` to reach `Question1/here/is/the/answer/data.zip`. \n",
+    "- Once there, `unzip [filename]`\n",
+    "- Use `cp -r` to copy the _fastq_ folder out.\n",
+    "\n",
     "=== END MARK SCHEME ==="
    ]
   },
@@ -103,7 +109,7 @@
    "source": [
     "\n",
     "#### aa.ii Confirmation of basic Jupyter notebook operations <br>\n",
-    "Use ```jupyter notebook``` to open HW 1 in your browser <br>"
+    "Use ```jupyter notebook``` to open HW1 in your browser <br>"
    ]
   },
   {
